syntax = "proto3";

package checkers.checkers;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "checkers/checkers/params.proto";
import "checkers/checkers/system_info.proto";
import "checkers/checkers/store_game.proto";

option go_package = "github.com/alice/checkers/x/checkers/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/params";
  
  }
  
  // Queries a SystemInfo by index.
  rpc SystemInfo (QueryGetSystemInfoRequest) returns (QueryGetSystemInfoResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/system_info";
  
  }
  
  // Queries a list of StoreGame items.
  rpc StoreGame    (QueryGetStoreGameRequest) returns (QueryGetStoreGameResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/store_game/{index}";
  
  }
  rpc StoreGameAll (QueryAllStoreGameRequest) returns (QueryAllStoreGameResponse) {
    option (google.api.http).get = "/alice/checkers/checkers/store_game";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetSystemInfoRequest {}

message QueryGetSystemInfoResponse {
  SystemInfo SystemInfo = 1 [(gogoproto.nullable) = false];
}

message QueryGetStoreGameRequest {
  string index = 1;
}

message QueryGetStoreGameResponse {
  StoreGame storeGame = 1 [(gogoproto.nullable) = false];
}

message QueryAllStoreGameRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllStoreGameResponse {
  repeated StoreGame                              storeGame  = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

